[project]
name = "timetree-exporter"
version = "0.6.1"
description = "A Tool for Exporting TimeTree Calendar and Convert to iCal format(.ics)"
authors = [{ name = "Fong-Chun Tsai", email = "eoleedimin@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["timetree", "exporter", "icalendar", "ics"]
classifiers = [
    # Supported Python versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    # License
    "License :: OSI Approved :: MIT License",
    # OS
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/eoleedi/TimeTree-Exporter"
Repository = "https://github.com/eoleedi/TimeTree-Exporter"
Issues = "https://github.com/eoleedi/TimeTree-Exporter/issues"
Changelog = "https://github.com/eoleedi/TimeTree-exporter/blob/main/CHANGELOG.md"

[project.scripts]
timetree-exporter = "timetree_exporter.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
icalendar = ">=6.1.0,<7.0.0"
tzdata = ">=2024.2,<2026.0"
requests = "^2.32.4"
pwinput-eoleedi = { version = "^1.0.3.post1", python = "<3.14" } # ctrl-c fix for pwinput

[tool.poetry]
packages = [{ include = "timetree_exporter" }]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.2"
pre-commit = "^4.0.1"
black = ">=24.10,<26.0"
pytest = "^8.4.1"
pytest-cov = ">=5,<7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
