[project]
name = "timetree-exporter"
version = "0.6.2"
description = "A Tool for Exporting TimeTree Calendar and Convert to iCal format(.ics)"
authors = [{ name = "Fong-Chun Tsai", email = "eoleedimin@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["timetree", "exporter", "icalendar", "ics"]
classifiers = [
    # Supported Python versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    # License
    "License :: OSI Approved :: MIT License",
    # OS
    "Operating System :: OS Independent",
]
requires-python = "<4.0,>=3.9"
dynamic = []
dependencies = [
    "icalendar<7.0.0,>=6.1.0",
    "tzdata<2026.0,>=2024.2",
    "requests<3.0.0,>=2.32.5",
    "pwinput-eoleedi>=1.0.3.post1,<2.0.0.0 ; python_full_version < '3.14'",
]

[project.urls]
Homepage = "https://github.com/eoleedi/TimeTree-Exporter"
Repository = "https://github.com/eoleedi/TimeTree-Exporter"
Issues = "https://github.com/eoleedi/TimeTree-Exporter/issues"
Changelog = "https://github.com/eoleedi/TimeTree-exporter/blob/main/CHANGELOG.md"

[project.scripts]
timetree-exporter = "timetree_exporter.__main__:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "timetree_exporter"
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pylint<4.0.0,>=3.3.9",
    "pre-commit<5.0.0,>=4.3.0",
    "black<26.0,>=24.10",
    "pytest<9.0.0,>=8.4.2",
    "pytest-cov<8,>=5",
]
